# ElektronischeBenisVerlaengerung

./: .gitignore  README.md
Einstiegsaufgabe/: Cutlery  readme.txt
TestsUeb2/: CMakeLists.txt  OCR.cpp  testcapture.cpp
TestsUeb2/Images/: Kennzeichen.xcf
Ueb1/: .cproject  .project  CMakeLists.txt  Parameterfindung.ods  abgabe-readme.txt  abgabe.tex  cutlery.cpp  dices.cpp  vonJohannes.txt
Ueb2/: .~lock.BRainstorm_Nummernschilderkennung_übungszetel_2.odt#  BRainstorm_Nummernschilderkennung_übungszetel_2.odt  Skizze_Aufg_5.odg  abgabe.tex
Ueb3/: CMakeLists.txt  Readme.txt  abgabe.tex  coreFunctions.cpp  coreFunctions.hpp  helpers.cpp  helpers.hpp  hotShit.cpp  hotShit.hpp  knownPlates.hpp  licenseRecog  licenseRecognizer.cpp  ocrBackend.cpp  ocrBackend.hpp
Ueb3/Übungszettel/: acvproject.cpp
Vorlage/: mat.cls  sebDenCls.cls
