cmake_minimum_required(VERSION 2.8)
project( Dices )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_definitions(-DCONFIG)
add_executable( CamCapture testcapture.cpp )
target_link_libraries( CamCapture ${OpenCV_LIBS} )
add_executable ( CamOCR OCR.cpp )
target_link_libraries( CamOCR ${OpenCV_LIBS} )
add_executable ( textDetection textdetection.cpp )
target_link_libraries( textDetection ${OpenCV_LIBS} )
add_executable ( textRecog end_to_end_recognition.cpp )
target_link_libraries( textRecog ${OpenCV_LIBS} )
message(${OpenCV_LIBS})
